[package]
name = "faction-hits"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive", "env"] }
anyhow = "1"
thiserror = "2"
dirs = "6"
reqwest = { version = "0.12", features = ["json"] }

[dev-dependencies]
tempfile = "3"

[[bin]]
name = "faction-hits"
path = "src/main.rs"
