[package]
name = "faction-hits"
version = "0.1.0"
edition = "2021"

[lib]
name = "faction_hits"
path = "src/lib.rs"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive", "env"] }
anyhow = "1"
thiserror = "2"
dirs = "6"
reqwest = { version = "0.12", features = ["json"] }
serenity = { version = "0.12", default-features = false, features = ["client", "gateway", "http", "model", "builder", "rustls_backend"] }
tokio-graceful-shutdown = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
async-trait = "0.1"

[dev-dependencies]
tempfile = "3"

[[bin]]
name = "faction-hits"
path = "src/main.rs"
